# cli

./: .gitignore  Cargo.toml  README.md
.github/: changelog-config.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: build.rs  create.rs  mod.rs
src/util/: git.rs  mod.rs  template.rs
templates/assemblyscript/: package.json
templates/rust/: Cargo.toml  klave.json
templates/rust/apps/hello-world/: Cargo.toml
templates/rust/apps/hello_world/: Cargo.toml
templates/rust/apps/hello_world/src/: bindings.rs
templates/rust/apps/hello_world/wit/: world.wit
templates/rust/apps/rust-template/wit/: world.wit
