[package]
name = "klave-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["cargo", "derive"] }
colored = "3.0.0"
console = "0.15.11"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
include_dir = "0.7.4"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
