[package]
name = "{{KLAVE_APP_SLUG}}"
version = "{{KLAVE_APP_VERSION}}"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
serde_json = "1.0.140"
klave = "0.3.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:{{KLAVE_APP_SLUG}}"

